--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -5,6 +5,7 @@
         <br/>
         {{gettext("Password:")}} <input type="password" name="password"/>
         <br/>
+        <input type="hidden" name="referer" value="{{referer}}">
         <input type="submit" value="{{gettext("Submit")}}"/>
     </form>
 </body>
