big commit: finish the mail confirmation functionality, fix bugs and numerous changes

--- a/templates/admin_user_add.html
+++ b/templates/admin_user_add.html
@@ -3,7 +3,7 @@
         <h2>{{ gettext("Add user") }}</h2>
         <form method="post" action="">
             {{ gettext("Username:") }} <input type="text" name="nickname"/>
-            {{ gettext("Email:") }} <input type="text" name="nickname"/>
+            {{ gettext("Email:") }} <input type="text" name="email"/>
             <input type="submit" value="{{ gettext("Submit") }}"/>
         </form>
     </body>
