--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -1,7 +1,7 @@
 <html>
 <body>
     <form method="post" action="/user/login">
-        {{gettext("Username:")}} <input type="text" name="nickname"/>
+        {{gettext("Username:")}} <input type="text" name="username"/>
         <br/>
         {{gettext("Password:")}} <input type="password" name="password"/>
         <br/>
