--- a/templates/admin_user_add.html
+++ b/templates/admin_user_add.html
@@ -2,7 +2,7 @@
     <body>
         <h2>{{ gettext("Add user") }}</h2>
         <form method="post" action="">
-            {{ gettext("Username:") }} <input type="text" name="nickname"/>
+            {{ gettext("Username:") }} <input type="text" name="username"/>
             {{ gettext("Email:") }} <input type="text" name="email"/>
             <input type="submit" value="{{ gettext("Submit") }}"/>
         </form>
