use webapp2's improved URI routing mechanism, and update the code to match it

--- a/templates/admin_user.html
+++ b/templates/admin_user.html
@@ -13,7 +13,7 @@
                     <td>{{ user.verified }}</td>
                 </tr>
             {% endfor %}
-            <a href="/admin/user/add">{{ gettext("Add") }}</a>
+            <a href="{{ user_add_url }}">{{ gettext("Add") }}</a>
             <input type="submit" value="{{ gettext("Delete selected") }}">
         </form
     </body>
