--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <form method="post" action="/user/login">
+    <form method="post" action="">
         {{gettext("Username:")}} <input type="text" name="username"/>
         <br/>
         {{gettext("Password:")}} <input type="password" name="password"/>
