change the way of defining validators, a bit more cumbersome, but easier for getting info about the validators from outside; refactor the RequestHandler a bit to separate the template defining part; some bug fixes and refining

--- a/templates/form.html
+++ b/templates/form.html
@@ -22,6 +22,7 @@
             {%- else %}{% endif %}"
         {% if caller is defined %} {{ caller() }} {% endif %}
     />
+    {%- if not model.is_required(field) %} {{ _("(Optional)") }} {% endif -%}
     <br/>
     {{ v_e(model, field) }}
 {% endmacro %}
