fixed a bunch of blog editting bugs and regessions about various things

--- a/templates/admin_user.html
+++ b/templates/admin_user.html
@@ -15,6 +15,6 @@
             {% endfor %}
             <a href="{{ user_add_url }}">{{ gettext("Add") }}</a>
             <input type="submit" value="{{ gettext("Delete selected") }}">
-        </form
+        </form>
     </body>
 </html>
