--- a/templates/admin_config.html
+++ b/templates/admin_config.html
@@ -1,17 +1,16 @@
-<html>
-    <body>
-        <form action="" method="post">
-            <table>
-                {% for config in configs %}
-                    <tr>
-                        <td>
-                            {{ config.name }}:
-                            <input type="text" name="{{config.name}}" value="{{config.value}}">
-                        </td>
-                    </tr>
-                {% endfor %}
-            </table>
-            <input type="submit" value="{{ gettext("Save") }}"/>
-        </form>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block body %}
+    <form action="" method="post">
+        <table>
+            {% for config in configs %}
+                <tr>
+                    <td>
+                        {{ config.name }}:
+                        <input type="text" name="{{config.name}}" value="{{config.value}}">
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
+        <input type="submit" value="{{ gettext("Save") }}"/>
+    </form>
+{% endblock %}
