--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,11 +1,10 @@
-<html>
-    <body>
-        {% if user %}
-        {{ gettext("hello %(name)s", name=user.username) }}
-            <br/>
-            <a href="{{logout_url}}">{{gettext("Logout")}}</a>
-        {% else %}
-            <a href="{{login_url}}">{{gettext("Login")}}</a>
-        {% endif %}
-    </body>
-</html>
+{% extends "base.html" %}
+{% block body %}
+    {% if user %}
+    {{ gettext("hello %(name)s", name=user.username) }}
+        <br/>
+        <a href="{{logout_url}}">{{gettext("Logout")}}</a>
+    {% else %}
+        <a href="{{login_url}}">{{gettext("Login")}}</a>
+    {% endif %}
+{% endblock %}
