--- a/templates/admin_user.html
+++ b/templates/admin_user.html
@@ -11,6 +11,7 @@
                 <td>{{ user.email }}</td>
                 <td>{{ user.created }}</td>
                 <td>{{ user.verified }}</td>
+                <td><a href="{{ edit_link(user) }}">{{ _("Edit") }}</a></td>
             </tr>
         {% endfor %}
         <a href="{{ user_add_url }}">{{ gettext("Add") }}</a>
