--- a/templates/blog_view.html
+++ b/templates/blog_view.html
@@ -1,9 +1,26 @@
 {% extends "base.html" %}
+{% import "form.html" as form %}
 {% block body %}
-    <h3 id="title">{{ model.title }}</h3>
+    <h3 id="title">{{ model.title|escape }}</h3>
     {{ model.display_created() }}, {{ _("by %(author)s", author=model.display_author()) }}
-    <p id="content">{{ model.content }}</p>
+    <p>{{ model.content|escape }}</p>
     {% if can_edit() %}
         <a href="{{ edit_url }}">{{ _("Edit") }}</a>
     {% endif %}
+
+    <br />
+    {% for comment in comments %}
+        {{ comment.display_created() }}, {{ _("by %(author)s", author=comment.display_author()) }}
+        <p>{{ comment.content|escape }}</p>
+    {% endfor %}
+    <form method="post" action="">
+        {% if not site.logged_in() %}
+            {{ form.input_field(guest_comment_model, "username") }}
+            {{ form.input_field(guest_comment_model, "email") }}
+            {{ form.input_field(guest_comment_model, "website") }}
+        {% endif %}
+        {{ form.textarea_field(comment_model, "content") }}
+        <input type="hidden" name="__master" value="{{ model.key.id() }}">
+        {{ form.submit("Post comment") }}
+    </form>
 {% endblock %}
