--- a/templates/blog_view.html
+++ b/templates/blog_view.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% import "form.html" as form %}
+{% import "utils.html" as utils %}
 {% block body %}
     <h3 id="title">{{ model.title|escape }}</h3>
     {{ model.display_created() }}, {{ _("by %(author)s", author=model.display_author()) }}
@@ -9,10 +10,11 @@
     {% endif %}
 
     <br />
-    {% for comment in comments %}
+    {% for comment in comments_pagin.items() %}
         {{ comment.display_created() }}, {{ _("by %(author)s", author=comment.display_author()) }}
         <p>{{ comment.content|escape }}</p>
     {% endfor %}
+    <p>{{ utils.next_prev_navi(comments_pagin) }}</p>
     <form method="post" action="">
         {% if not site.logged_in() %}
             {{ form.input_field(guest_comment_model, "username") }}
