change the Logout link to POST request in order to make it more secure

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,7 +3,9 @@
     {% if user %}
     {{ gettext("hello %(name)s", name=user.username) }}
         <br/>
-        <a href="{{logout_url}}">{{gettext("Logout")}}</a>
+        <form method="post" action="{{logout_url}}">
+            <input type="submit" value="{{gettext("Logout")}}"/>
+        </form>
     {% else %}
         <a href="{{login_url}}">{{gettext("Login")}}</a>
     {% endif %}
