--- a/templates/blog_view.html
+++ b/templates/blog_view.html
@@ -4,7 +4,7 @@
 {% block body %}
     <h3 id="title">{{ model.title|escape }}</h3>
     {{ model.display_created() }}, {{ _("by %(author)s", author=model.display_author()) }}
-    <p>{{ model.content|escape }}</p>
+    <p>{{ model.content }}</p>
     {% if can_edit() %}
         <a href="{{ edit_url }}">{{ _("Edit") }}</a>
     {% endif %}
@@ -12,7 +12,7 @@
     <br />
     {% for comment in comments_pagin.items() %}
         {{ comment.display_created() }}, {{ _("by %(author)s", author=comment.display_author()) }}
-        <p>{{ comment.content|escape }}</p>
+        <p>{{ comment.content }}</p>
     {% endfor %}
     <p>{{ utils.next_prev_navi(comments_pagin) }}</p>
     <form method="post" action="">
