--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         {% block head %}
             <link rel="stylesheet" href="/css/jui_theme/jquery-ui-1.8.23.custom.css" />
             <link rel="stylesheet" href="/css/font-awesome.css" />
+            <link rel="stylesheet" href="/css/foundation.css" />
             <link rel="stylesheet" href="/css/style.css" />
         {% endblock %}
     </head>
@@ -13,7 +14,7 @@
         {% endblock %}
 
         {% block js %}
-            <script src="/js/libs/jquery.min.js"></script>
+            <script src="/js/libs/foundation.min.js"></script>
             <script src="/js/libs/jquery-ui.min.js"></script>
             <script src="/js/hallojs/examples/hallo-min.js"></script>
             <script src="/js/common.js"></script>
