--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -5,7 +5,7 @@
             <li>{{gettext("Username:")}} <input type="text" name="username"/></li>
             <li>{{gettext("Password:")}} <input type="password" name="password"/></li>
             <li><input type="hidden" name="referer" value="{{referer}}"></li>
-            <li><input type="submit" value="{{gettext("Submit")}}"/></li>
+            <li><input type="submit" class="button" value="{{gettext("Login")}}"/></li>
         </ul>
     </form>
 {% endblock %}
