--- a/css/style.css
+++ b/css/style.css
@@ -21,27 +21,16 @@ form ul {
 }
 
 .content-edit {
-    padding: 5px;
+    width: 99%;
     min-height: 300px;
-    border: 1px solid #CCCCCC;
-    color: rgba(0, 0, 0, 0.75);
-    display: block;
-    font-size: 14px;
-    margin: 0 0 12px;
-    padding: 6px;
-    background: #f2f2f2;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
-    -o-border-radius: 2px;
-    border-radius: 2px;
-    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-}
+    margin: 30px auto;
+    padding: 20px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #959595;
+    background-color: #FFFFFF;
 
-.content-edit:focus {
-    background: none repeat scroll 0 0 #FAFAFA;
-    border-color: #B3B3B3;
-    outline: medium none !important;
+    -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), inset 0 0 10px rgba(0, 0, 0, 0.03);
+    -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), inset 0 0 10px rgba(0, 0, 0, 0.03);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), inset 0 0 10px rgba(0, 0, 0, 0.03);
 }
