add new user Display Name field to UserModel; fix some bugs in blog_view

--- a/templates/admin_user_add.html
+++ b/templates/admin_user_add.html
@@ -5,6 +5,7 @@
     <form method="post" action="">
         <ul>
             <li>{{ form.input_field(model, "username") }}</li>
+            <li>{{ form.input_field(model, "name") }}</li>
             <li>{{ form.input_field(model, "email") }}</li>
             <li>{{ form.input_field(model, "password", "password") }}</li>
             <li>{{ form.input_field(model, "_password_confirm", "password") }}</li>
